syntax = "proto3";

package proto.v1;

option go_package = "github.com/jacobmichels/computer_nerd/gen/proto/v1;nerdv1";

message SolveRequest {
    int32 rows = 1;
    int32 cols = 2;
    int32 buffer_size = 3;
    repeated string grid = 4;
    repeated string desired_string = 5;
}

message SolveResponse{
    bool possible = 1;
    repeated Index solution_indexes = 2;
}

message Index{
    int32 x = 1;
    int32 y = 2;
}

service SolveService{
    rpc Solve(SolveRequest) returns (SolveResponse);
}